Bug#38769 - Backup: write table data does not stop iterating when all drivers are handled

Fix: stop iteration that adds drivers to the scheduler when there are no more drivers in Image_info.m_snap